# BuckshotRoulette

./: CMakeLists.txt  Clip.cpp  Clip.h  Computer.cpp  Computer.h  Game.cpp  Game.h  Human.cpp  Human.h  Item.cpp  Item.h  Player.cpp  Player.h  README.md  Round.cpp  Round.h  main.cpp
.gitignore/: CMakeLists.txt
